added new js file and content for second page

--- a/single-repo.html
+++ b/single-repo.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +23,7 @@
   </header>
   
   <main>
-    <div id="issues-container" class="list-group">
+    <div id="issue-container" class=list-group">
 
     </div>
   
